<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item"
    android:padding="@dimen/padding"
    android:layout_margin="@dimen/margin2"
    android:background="@drawable/background_border_grey"
    >

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/user_phone"
        />

    <TextView
        android:id="@+id/user_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:hint="@string/user_phone"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size2"
        android:hint="@string/user_email"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/user_company"
        />

    <TextView
        android:id="@+id/user_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size2"
        android:hint="@string/user_company"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/user_email"
        app:layout_constraintEnd_toStartOf="@id/user_city"
        />
    <TextView
        android:id="@+id/user_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size2"
        android:hint="@string/user_city"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/user_company"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>